Chore: change short cut keys so there they do not conflict on the same dialog

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -49,11 +49,11 @@ angal.common.ok.btn.key                                                         
 angal.common.print.btn                                                           = Imprimer
 angal.common.print.btn.key                                                       = I
 angal.common.save.btn                                                            = Enregistrer
-angal.common.save.btn.key                                                        = E
+angal.common.save.btn.key                                                        = G
 angal.common.search.btn                                                          = Chercher
 angal.common.search.btn.key                                                      = C
 angal.common.stockcard.btn                                                       = MouvementsCard
-angal.common.stockcard.btn.key                                                   = M
+angal.common.stockcard.btn.key                                                   = D
 angal.common.stockledger.btn                                                     = Registre des Stocks
 angal.common.stockledger.btn.key                                                 = R
 angal.common.submit.btn                                                          = Envoyer
@@ -288,15 +288,15 @@ angal.admission.admission.btn.key                                               
 angal.admission.examination.btn                                                  = Examen
 angal.admission.examination.btn.key                                              = X
 angal.admission.opd.btn                                                          = DDP
-angal.admission.opd.btn.key                                                      = O
+angal.admission.opd.btn.key                                                      = D
 angal.admission.bill.btn                                                         = Facture
 angal.admission.bill.btn.key                                                     = F
 angal.admission.data.btn                                                         = Donnée
-angal.admission.data.btn.key                                                     = D
+angal.admission.data.btn.key                                                     = É
 angal.admission.malnutritioncontrol.btn                                          = Contrôle Malnutrition
 angal.admission.malnutritioncontrol.btn.key                                      = M
 angal.admission.patientfolder.btn                                                = Dossier Clinique
-angal.admission.patientfolder.btn.key                                            = D
+angal.admission.patientfolder.btn.key                                            = Q
 angal.admission.patientfolder.opdchart.btn                                       = Dossier DDP
 angal.admission.patientfolder.opdchart.btn.key                                   = P
 angal.admission.patientfolder.dischart.btn                                       = Graphique de Décharge
@@ -308,7 +308,7 @@ angal.admission.patientfolder.dicom.btn.key                                     
 angal.admission.therapy.btn                                                      = Therapie
 angal.admission.therapy.btn.key                                                  = T
 angal.admission.merge.btn                                                        = Fusionner
-angal.admission.merge.btn.key                                                    = F
+angal.admission.merge.btn.key                                                    = I
 angal.billbrowser.report.btn                                                     = Rapport
 angal.billbrowser.report.btn.key                                                 = R
 angal.billbrowser.editbill.btn                                                   = Modifiez Facture
@@ -332,9 +332,9 @@ angal.newbill.findpatient.btn.key                                               
 angal.newbill.changepatient.btn                                                  = Changer de Patient
 angal.newbill.changepatient.btn.key                                              = C
 angal.newbill.givechange.btn                                                     = Faire le Change
-angal.newbill.givechange.btn.key                                                 = F
+angal.newbill.givechange.btn.key                                                 = C
 angal.newbill.paid.btn                                                           = Payé
-angal.newbill.paid.btn.key                                                       = P
+angal.newbill.paid.btn.key                                                       = É
 angal.newbill.refund.btn                                                         = Rembourser
 angal.newbill.refund.btn.key                                                     = R
 angal.newbill.paymentreceipt.btn                                                 = Reçu Payement
@@ -432,9 +432,9 @@ angal.stat.runexamslistreportbytype.btn.key                                     
 angal.therapy.addvisit.btn                                                       = Ajoutez une Visite
 angal.therapy.addvisit.btn.key                                                   = J
 angal.therapy.removevisit.btn                                                    = Supprimez Visite
-angal.therapy.removevisit.btn.key                                                = S
+angal.therapy.removevisit.btn.key                                                = V
 angal.therapy.worksheet.btn                                                      = Feuille de Travail
-angal.therapy.worksheet.btn.key                                                  = F
+angal.therapy.worksheet.btn.key                                                  = T
 angal.therapy.checkavailability.btn                                              = Contrôler la Disponibilité
 angal.therapy.checkavailability.btn.key                                          = C
 angal.therapy.addtherapy.btn                                                     = Ajoutez une Thérapie
