Chore: two small fixes to Spanish text

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1310,7 +1310,7 @@ angal.patient.tobm                                                              
 angal.patient.unknown.btn                                                                              = Desconocido
 angal.patient.yes.btn                                                                                  = Si
 angal.patient.ymd.fmt.msg                                                                              = {0}y {1}m {2}d
-angal.patientbill.editpatientbill.fmt.title                                                            = Modificar Factura de Paciente
+angal.patientbill.editpatientbill.fmt.title                                                            = Modificar Factura de Paciente {0}
 angal.patientbill.newpatientbill.title                                                                 = Nuevo Factura de Paciente
 angal.patientphoto.file.btn                                                                            = Archivo
 angal.patientphoto.file.btn.key                                                                        = A
@@ -1552,7 +1552,7 @@ angal.therapy.edittherapy.btn.key                                               
 angal.therapy.edittherapyentryform.title                                                               = Modificar Formulario de Entrada de Terapia
 angal.therapy.end                                                                                      = Fin
 angal.therapy.every                                                                                    = Cada
-angal.therapy.followingdrugsarefewornotavailable                                                       = Las siguientes  medicinas son pocas o no disponibles
+angal.therapy.followingdrugsarefewornotavailable                                                       = Las siguientes  medicinas son pocas o no disponibles:\n
 angal.therapy.four                                                                                     = Cuatro
 angal.therapy.frequencywithinday                                                                       = Frecuencia al día
 angal.therapy.frequencywithinperiod                                                                    = Frecuencia en el período
