OP-557 add missing keys

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -228,6 +228,7 @@ angal.agetype.somerangesarenotdefinedpleasecheckthevalues.msg                   
 angal.billbrowser.balance.col                                                                          = Balance
 angal.billbrowser.bills.title                                                                          = Bills
 angal.billbrowser.closed.title                                                                         = Closed
+angal.billbrowser.deletebill                                                                           = Delete Bill
 angal.billbrowser.deletebill.btn                                                                       = Delete Bill
 angal.billbrowser.deletebill.btn.key                                                                   = D
 angal.billbrowser.deletetheselectedbill.msg                                                            = Delete the selected bill?
@@ -237,6 +238,7 @@ angal.billbrowser.editbill.btn.key                                              
 angal.billbrowser.fullreportallbills.txt                                                               = Full Report (all bills)
 angal.billbrowser.lastpayment.col                                                                      = Last Payment
 angal.billbrowser.month.txt                                                                            = Month
+angal.billbrowser.newbill                                                                              = New Bill
 angal.billbrowser.newbill.btn                                                                          = New Bill
 angal.billbrowser.newbill.btn.key                                                                      = N
 angal.billbrowser.notpaidcolon.txt                                                                     = Not Paid:
@@ -302,12 +304,14 @@ angal.common.datefrom.label                                                     
 angal.common.dateto.label                                                                              = Date To:
 angal.common.days.txt                                                                                  = Days
 angal.common.delete                                                                                    = Delete
+angal.common.deletem                                                                                   = Delete
 angal.common.delete.btn                                                                                = Delete
 angal.common.delete.btn.key                                                                            = D
 angal.common.description.txt                                                                           = Description
 angal.common.discharge.txt                                                                             = Discharge
 angal.common.doyouwanttoproceed.msg                                                                    = Do you want to proceed?
 angal.common.edit                                                                                      = Edit
+angal.common.editm                                                                                     = Edit
 angal.common.edit.btn                                                                                  = Edit
 angal.common.edit.btn.key                                                                              = E
 angal.common.email.txt                                                                                 = E-mail
@@ -338,6 +342,7 @@ angal.common.minutes                                                            
 angal.common.minutesabbr                                                                               = Min
 angal.common.months.txt                                                                                = Months
 angal.common.name.txt                                                                                  = Name
+angal.common.new                                                                                       = New
 angal.common.new.btn                                                                                   = New
 angal.common.new.btn.key                                                                               = N
 angal.common.newpatient.btn                                                                            = New Patient
