Chore: remove comments from English bundle

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -994,7 +994,7 @@ angal.newbill.item.col                                                          
 angal.newbill.item.title                                                                               = Item
 angal.newbill.list.txt                                                                                 = List
 angal.newbill.medical.btn                                                                              = Medical
-angal.newbill.medical.key                                                                              = M
+angal.newbill.medical.btn.key                                                                          = M
 angal.newbill.medical.title                                                                            = Medical
 angal.newbill.newdescription.txt                                                                       = new description
 angal.newbill.nopricelistselectedwilbeused.fmt.msg                                                     = No pricelist selected. {0} will be used.
