OP-559 change shortcut key to be unique

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -616,7 +616,7 @@ angal.medicals.critlevel.col                                                    
 angal.medicals.deletemedical.fmt.msg                                                                   = Delete medical: {0}?
 angal.medicals.editmedical.title                                                                       = Edit Medical
 angal.medicals.expiring.btn                                                                            = Expiring
-angal.medicals.expiring.btn.key                                                                        = X
+angal.medicals.expiring.btn.key                                                                        = P
 angal.medicals.expiringreport                                                                          = Expiring Report
 angal.medicals.export.btn                                                                              = Export
 angal.medicals.export.btn.key                                                                          = X
