OP-564 change shortcut key to be unique

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -649,7 +649,7 @@ angal.medicals.today                                                            
 angal.medicals.type                                                                                    = Type
 angal.medicals.withlot                                                                                 = With lots
 angal.medicalstock.charge.btn                                                                          = Charge
-angal.medicalstock.charge.btn.key                                                                      = C
+angal.medicalstock.charge.btn.key                                                                      = H
 angal.medicalstock.chooseamedical.msg                                                                  = Choose a medical.
 angal.medicalstock.chooseavalidduedate.msg                                                             = Choose a valid due date.
 angal.medicalstock.chooseavalidmovementdate.msg                                                        = Choose a valid movement date.
