OP-566 update dialog style to match

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -681,7 +681,7 @@ angal.medicalstock.multiplecharging.chargetype                                  
 angal.medicalstock.multiplecharging.chooseamedical                                                     = Choose a Medical
 angal.medicalstock.multiplecharging.cost                                                               = Cost
 angal.medicalstock.multiplecharging.datecannotbebeforelastmovementdate.msg                             = Date cannot be before last movement date.
-angal.medicalstock.multiplecharging.existinglot                                                        = Existing lots
+angal.medicalstock.multiplecharging.existinglot                                                        = Existing Lots
 angal.medicalstock.multiplecharging.expiringdate                                                       = Expiring
 angal.medicalstock.multiplecharging.expiringdateinthepastnotallowed                                    = Expiring date in the past not allowed
 angal.medicalstock.multiplecharging.expirydatebeforepreparationdate                                    = Expiring date before Preparation date not allowed
