OP-567 make shortcut key unique

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -756,7 +756,7 @@ angal.medicalstock.wardpharmacy.title                                           
 angal.medicalstockward.agefrommustbelowerthanageto                                                     = 'Age from' must be lower than 'Age to'
 angal.medicalstockward.allmedicals                                                                     = All Medicals
 angal.medicalstockward.chooselot.btn                                                                   = Choose a Lot
-angal.medicalstockward.chooselot.btn.key                                                               = C
+angal.medicalstockward.chooselot.btn.key                                                               = L
 angal.medicalstockward.count                                                                           = Count
 angal.medicalstockward.drugs                                                                           = Drugs
 angal.medicalstockward.incomings                                                                       = Incomings
