OP-570 make shortcut key unique

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -799,7 +799,7 @@ angal.medicalstockward.rectify.unitcost                                         
 angal.medicalstockward.report.btn                                                                      = Report
 angal.medicalstockward.report.btn.key                                                                  = P
 angal.medicalstockward.reset.btn                                                                       = Reset
-angal.medicalstockward.reset.btn.key                                                                   = R
+angal.medicalstockward.reset.btn.key                                                                   = S
 angal.medicalstockward.selectaward                                                                     = <select a ward>
 angal.medicalstockward.ward                                                                            = WARD
 angal.medicalstockward.weightfrommustbelowerthanweightto                                               = 'Weight from' must be lower than 'Weight to'
