OP-574 make shortcut key unique in Therapy dialog

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1402,7 +1402,7 @@ angal.therapy.addvisit.btn.key                                                  
 angal.therapy.availablem                                                                               = AVAILABLE
 angal.therapy.changenotifysettingsfor                                                                  = Change notify settings
 angal.therapy.checkavailability.btn                                                                    = Check Availability
-angal.therapy.checkavailability.btn.key                                                                = C
+angal.therapy.checkavailability.btn.key                                                                = H
 angal.therapy.daydays                                                                                  = day/s
 angal.therapy.deletealltherapiesfor                                                                    = Delete all therapies for
 angal.therapy.deleteallvisitsfor                                                                       = Delete all visits for
