OP-575 make Exams and Disease report dialogs consistent

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1332,6 +1332,7 @@ angal.stat.august                                                               
 angal.stat.dailyopdmorbiditysummaryover5                                                               = MOH 705A - Over 5 - Daily Outpatient Morbidity Summary Sheet
 angal.stat.dailyopdmorbiditysummaryunder5                                                              = MOH 705A - Under 5 - Daily Outpatient Morbidity Summary Sheet
 angal.stat.december                                                                                    = December
+angal.stat.diseaselist                                                                                 = Disease List
 angal.stat.diseasereport.title                                                                         = Disease Report
 angal.stat.examslist                                                                                   = Exams List
 angal.stat.examsreport.title                                                                           = Exams Report
@@ -1370,7 +1371,7 @@ angal.stat.registeredpatientbyprovenance                                        
 angal.stat.report                                                                                      = Report
 angal.stat.reporterror.msg                                                                             = Something went wrong during report generation.
 angal.stat.reportlauncher.title                                                                        = Report Launcher
-angal.stat.rundiseaseslistbytype.btn                                                                   = Run Disease List by Type
+angal.stat.rundiseaseslistbytype.btn                                                                   = Run Disease List Report by Type
 angal.stat.rundiseaseslistbytype.btn.key                                                               = R
 angal.stat.runexamslistreportbytype.btn                                                                = Run Exam List Report by Type
 angal.stat.runexamslistreportbytype.btn.key                                                            = R
