Added icon button to view previous visits' notes

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -483,7 +483,9 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = (A)
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
+angal.examination.lastnote                                                                             = Ultimo Reclamo
 angal.examination.note                                                                                 = Reclamo
+angal.examination.note.col                                                                             = Notas
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Por favor inserte una descripción válida de la auscultación.
 angal.examination.pleaseinsertavalidboweldescription.msg                                               = Por favor inserte una descripción válida para el intestino.
 angal.examination.pleaseinsertavaliddiuresisdescription.msg                                            = Por favor inserte una descripción válida de diuresis.
