--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -483,7 +483,9 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = (H)
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
+angal.examination.lastnote                                                                             = Dernier Remarque
 angal.examination.note                                                                                 = Remarque
+angal.examination.note.col                                                                             = Remarques
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Veuillez insérer une description valide de l'Auscultation.
 angal.examination.pleaseinsertavalidboweldescription.msg                                               = Veuillez insérer une description valide pour Intestin.
 angal.examination.pleaseinsertavaliddiuresisdescription.msg                                            = Veuillez insérer une description valide de Diurèse.
