--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -483,7 +483,9 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = FC
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
+angal.examination.lastnote                                                                             = Ultima Visita
 angal.examination.note                                                                                 = Sintomi
+angal.examination.note.col                                                                             = Note
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Prego inserire una descrizione di Auscultazione valida.
 angal.examination.pleaseinsertavalidboweldescription.msg                                               = Prego inserire una descrizione di Alvo valida.
 angal.examination.pleaseinsertavaliddiuresisdescription.msg                                            = Prego inserire una descrizione di Diuresi valida.
