Replaced bundle with formatted message

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -483,7 +483,7 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = (A)
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
-angal.examination.lastnote                                                                             = Ultimo Reclamo
+angal.examination.lastnote.fmt.msg                                                                     = Ultimo Reclamo {0}:\n{1}\n\n
 angal.examination.note                                                                                 = Reclamo
 angal.examination.note.col                                                                             = Notas
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Por favor inserte una descripción válida de la auscultación.
