--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -483,7 +483,7 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = (H)
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
-angal.examination.lastnote                                                                             = Dernier Remarque
+angal.examination.lastnote.fmt.msg                                                                     = Dernier Remarque {0}:\n{1}\n\n
 angal.examination.note                                                                                 = Remarque
 angal.examination.note.col                                                                             = Remarques
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Veuillez insérer une description valide de l'Auscultation.
