--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -483,7 +483,7 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = (H)
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
-angal.examination.lastnote                                                                             = Last Note
+angal.examination.lastnote.fmt.msg                                                                     = Last Note {0}:\n{1}\n\n
 angal.examination.note                                                                                 = Complain
 angal.examination.note.col                                                                             = Note
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Please insert a valid Auscultation description.
