--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -483,7 +483,7 @@ angal.examination.heightabbr.col                                                
 angal.examination.heightabbr.txt                                                                       = FC
 angal.examination.hgt                                                                                  = HGT
 angal.examination.hgt.col                                                                              = HGT
-angal.examination.lastnote                                                                             = Ultima Visita
+angal.examination.lastnote.fmt.msg                                                                     = Ultima Visita {0}:\n{1}\n\n
 angal.examination.note                                                                                 = Sintomi
 angal.examination.note.col                                                                             = Note
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Prego inserire una descrizione di Auscultazione valida.
